src/objects/News_Article__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Chatter_Group__c</fullName>
        <defaultValue>&quot;news.centre@unilever.com&quot;</defaultValue>
        <description>Id&apos;s of the Admin Chatter Groups (delimited by comma)</description>
        <label>Admin Chatter Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the News Article is Archived. Comments are not aggregated for Archived News Articles.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Groups__c</fullName>
        <defaultValue>&quot;0F9E0000000JHbo&quot;</defaultValue>
        <description>Local setting for which Chatter Groups this Article should be posted to. Enter Group Ids, separated by commas.</description>
        <inlineHelpText>Local override to configure which Chatter Groups this Article should be socialised to. Enter Group Ids, separated by commas.</inlineHelpText>
        <label>Chatter Groups</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Comment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment_GA_URL__c</fullName>
        <defaultValue>&quot;?utm_source=Chatter&amp;utm_medium=ChatterComment&amp;utm_campaign=NewsCentre&quot;</defaultValue>
        <description>Google Analytic URL for Chatter Comment</description>
        <label>Comment GA URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( Image_URL__c , &quot;No Image&quot; , 100, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like_Count_RSF__c</fullName>
        <label>Like Count</label>
        <summaryForeignKey>NewsArticleLike__c.News_Article__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Like_GA_URL__c</fullName>
        <defaultValue>&quot;?utm_source=Chatter&amp;utm_medium=ChatterLike&amp;utm_campaign=NewsCentre&quot;</defaultValue>
        <description>Google Analytic URL for Chatter Like</description>
        <label>Like GA URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News_Article_Topics__c</fullName>
        <label>News Article Topics</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>News_Body__c</fullName>
        <label>News Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>News_Publish_Date__c</fullName>
        <label>News Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Post_GA_URL__c</fullName>
        <defaultValue>&quot;?utm_source=Chatter&amp;utm_medium=ChatterArticle&amp;utm_campaign=NewsCentre&quot;</defaultValue>
        <description>Google Analytic URL to be appended for Chatter Post.</description>
        <label>Post GA URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_to_NewsCentre__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether this Article is shared to the News Centre Chatter Group</description>
        <inlineHelpText>Socialise this News Article to Chatter Groups</inlineHelpText>
        <label>Post to NewsCentre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Links__c</fullName>
        <label>Related Links</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_News_Article__c</fullName>
        <label>Related News Article</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Count__c</fullName>
        <label>Share Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sharepoint_URL__c</fullName>
        <label>Sharepoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <defaultValue>&quot;News Centre&quot;</defaultValue>
        <description>Contains the Site Name for the News Article.</description>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <defaultValue>&quot;News Centre&quot;</defaultValue>
        <description>Determines the site type for the News Article i.e. MCO or News Centre</description>
        <label>Site Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Socialise_Activity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether Likes and Posts are socialised to the User&apos;s Feed</description>
        <inlineHelpText>Shares Likes and Post Activity on the Article to the User&apos;s Feed</inlineHelpText>
        <label>Socialise Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Title__c</fullName>
        <label>Sub Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>News Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video Article</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Count__c</fullName>
        <label>View Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>News Article</label>
    <listViews>
        <fullName>ANZ</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <label>ANZ</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>News_Article_Topics__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Comment_Count__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>Socialise_Activity__c</columns>
        <columns>Comment_GA_URL__c</columns>
        <columns>Like_GA_URL__c</columns>
        <columns>Chatter_Groups__c</columns>
        <columns>Admin_Chatter_Group__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Bangladesh</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Bangladesh</value>
        </filters>
        <label>Bangladesh</label>
    </listViews>
    <listViews>
        <fullName>Benelux_FR</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Benelux FR</value>
        </filters>
        <label>Benelux FR</label>
    </listViews>
    <listViews>
        <fullName>Benelux_NL</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Benelux NL</value>
        </filters>
        <label>Benelux NL</label>
    </listViews>
    <listViews>
        <fullName>Brazil</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <label>Brazil</label>
    </listViews>
    <listViews>
        <fullName>Central_Africa</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Central Africa</value>
        </filters>
        <label>Central Africa</label>
    </listViews>
    <listViews>
        <fullName>China</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China</label>
    </listViews>
    <listViews>
        <fullName>Czech_and_Slovak_republic</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Czech and Slovak republic</value>
        </filters>
        <label>Czech and Slovak republic</label>
    </listViews>
    <listViews>
        <fullName>Dach</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Dach</value>
        </filters>
        <label>Dach</label>
    </listViews>
    <listViews>
        <fullName>Essentials</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Essentials</value>
        </filters>
        <label>Essentials</label>
    </listViews>
    <listViews>
        <fullName>Europe</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <label>Europe</label>
    </listViews>
    <listViews>
        <fullName>France</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>France</label>
    </listViews>
    <listViews>
        <fullName>Greece</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>Greece</value>
        </filters>
        <label>Greece</label>
    </listViews>
    <listViews>
        <fullName>HK_TW</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Comment_Count__c</columns>
        <columns>Like_Count_RSF__c</columns>
        <columns>Title__c</columns>
        <columns>Sharepoint_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site_Name__c</field>
            <operation>equals</operation>
            <value>HK&amp;TW</value>
        </filters>
        <label>HK&amp;TW</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>